force-app/main/default/objects/KT_Signature_Complete__e/KT_Signature_Complete__e.object-meta.xml
<CustomObject>
    <description>B4 platform event published when a signature workflow is fully completed.</description>
    <label>KT Signature Complete</label>
    <pluralLabel>KT Signature Complete Events</pluralLabel>
</CustomObject>