force-app/main/default/objects/KT_Signature_Complete__e/fields/AllSignersSigned__c.field-meta.xml
<CustomField>
    <fullName>AllSignersSigned__c</fullName>
    <defaultValue>true</defaultValue>
    <label>All Signers Signed</label>
    <type>Checkbox</type>
</CustomField>