force-app/main/default/objects/KT_Signature_Complete__e/fields/DocumentId__c.field-meta.xml
<CustomField>
    <fullName>DocumentId__c</fullName>
    <label>Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>