force-app/main/default/objects/KT_Signature_Complete__e/fields/SignatureRequestId__c.field-meta.xml
<CustomField>
    <fullName>SignatureRequestId__c</fullName>
    <label>Signature Request Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>